--- a/index.sass
+++ b/index.sass
@@ -2,6 +2,7 @@
   background-color: #e2e3e5
   padding: 0.5rem 1rem
   border: 1px solid rgba(0, 0, 0, .125)
+  text-align: center
   &:first-child
     border-bottom-right-radius: 0.25rem
     border-bottom-left-radius: 0.25rem
