--- a/index.sass
+++ b/index.sass
@@ -1,11 +1,11 @@
 .stack-item
   background-color: #e2e3e5
-  padding: 0.5rem 1rem
-  border: 1px solid rgba(0, 0, 0, .125)
+  padding: 8px 16px
+  border: 1px solid rgba(0, 0, 0, 0.125)
   text-align: center
   &:first-child
-    border-bottom-right-radius: 0.25rem
-    border-bottom-left-radius: 0.25rem
+    border-bottom-right-radius: 4px
+    border-bottom-left-radius: 4px
   &:last-child
     cursor: pointer
     position: relative
@@ -16,9 +16,9 @@
         top: 0
         left: calc(100% + 15px)
         padding: 6px 8px
-        border: 1px solid
+        border: 1px solid #ced4da
         border-radius: 4px
-        background: white
+        background: #fff
         white-space: nowrap
         pointer-events: none
         font-size: 12px
